--- a/src/oed-testdata.Server/oed-testdata.Server.csproj
+++ b/src/oed-testdata.Server/oed-testdata.Server.csproj
@@ -8,6 +8,7 @@
 		<SpaRoot>..\oed-testdata.client</SpaRoot>
 		<SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
 		<SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
+		<UserSecretsId>633a644f-15a0-459f-a69c-e12c450742a0</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
