--- a/.github/workflows/CI-CD-test-app.yml
+++ b/.github/workflows/CI-CD-test-app.yml
@@ -3,7 +3,7 @@ name: CI/CD testapp-app
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 env:
   DOTNET_VERSION: '9.x' # Global environment variables
