--- a/src/oed-testdata.Server/oed-testdata.Server.csproj
+++ b/src/oed-testdata.Server/oed-testdata.Server.csproj
@@ -13,6 +13,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Altinn.Platform.Storage.Interface" Version="4.0.4" />
+		<PackageReference Include="CloudNative.CloudEvents.AspNetCore" Version="2.8.0" />
+		<PackageReference Include="CloudNative.CloudEvents.SystemTextJson" Version="2.8.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
 		<PackageReference Include="Scalar.AspNetCore" Version="1.2.45" />
 		<PackageReference Include="Microsoft.AspNetCore.SpaProxy">
