Fix transactions file

--- a/src/oed-testdata.Server/oed-testdata.Server.csproj
+++ b/src/oed-testdata.Server/oed-testdata.Server.csproj
@@ -30,4 +30,10 @@
 		</ProjectReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="Testdata\Json\Bank\Transactions\Transaksjonshistorikk.xlsx">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
