--- a/src/oed-testdata.Server/oed-testdata.Server.csproj
+++ b/src/oed-testdata.Server/oed-testdata.Server.csproj
@@ -1,38 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<RootNamespace>oed_testdata.Server</RootNamespace>
-		<SpaRoot>..\oed-testdata.client</SpaRoot>
-		<SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
-		<SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
-		<UserSecretsId>633a644f-15a0-459f-a69c-e12c450742a0</UserSecretsId>
-	</PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="Altinn.ApiClients.Maskinporten" Version="9.2.1" />
-		<PackageReference Include="Altinn.Platform.Storage.Interface" Version="4.0.4" />
-		<PackageReference Include="CloudNative.CloudEvents.AspNetCore" Version="2.8.0" />
-		<PackageReference Include="CloudNative.CloudEvents.SystemTextJson" Version="2.8.0" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
-		<PackageReference Include="Scalar.AspNetCore" Version="1.2.45" />
-		<PackageReference Include="Microsoft.AspNetCore.SpaProxy">
-			<Version>8.*-*</Version>
-		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\oed-testdata.client\oed-testdata.client.esproj">
-			<ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-		</ProjectReference>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Update="Testdata\Json\Bank\Transactions\Transaksjonshistorikk.xlsx">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
-	</ItemGroup>
-
+  <PropertyGroup>
+    <TargetFramework>net10.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>oed_testdata.Server</RootNamespace>
+    <SpaRoot>..\oed-testdata.client</SpaRoot>
+    <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
+    <SpaProxyServerUrl>https://localhost:5173</SpaProxyServerUrl>
+    <UserSecretsId>633a644f-15a0-459f-a69c-e12c450742a0</UserSecretsId>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Altinn.ApiClients.Maskinporten" Version="9.2.1" />
+    <PackageReference Include="Altinn.Platform.Storage.Interface" Version="4.0.14" />
+    <PackageReference Include="CloudNative.CloudEvents.AspNetCore" Version="2.8.0" />
+    <PackageReference Include="CloudNative.CloudEvents.SystemTextJson" Version="2.8.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.10.3" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
+      <Version>10.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\oed-testdata.client\oed-testdata.client.esproj">
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Testdata\Json\Bank\Transactions\Transaksjonshistorikk.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
