--- a/.github/workflows/CI-CD-test-app-linux.yml
+++ b/.github/workflows/CI-CD-test-app-linux.yml
@@ -37,11 +37,11 @@ jobs:
         run: dotnet test -c Release --no-build --verbosity normal
 
       - name: Publish
-        run: dotnet publish ./src/oed-testdata.Server/oed-testdata.Server.csproj --no-build -c Release -o ./publish
+        run: mkdir -p /home/runner/.aspnet/https && dotnet publish ./src/oed-testdata.Server/oed-testdata.Server.csproj --no-build -c Release -o ./publish
 
       - name: Deploy to Azure App Service (Test)
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "${{ vars.TEST_APP_SERVICE_NAME}}"
+          app-name: "${{ env.TEST_APP_SERVICE_NAME }}"
           publish-profile: ${{ secrets.PUBLISH_PROFILE_LINUX }}
           package: ./publish/
