--- a/.github/workflows/CI-CD-test-app-linux.yml
+++ b/.github/workflows/CI-CD-test-app-linux.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 env:
   DOTNET_VERSION: "10.x" # Global environment variables
+  DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
   TEST_APP_SERVICE_NAME: "oed-testapp-app-linux"
 
 jobs:
