--- a/.github/workflows/CI-CD-test-app-linux.yml
+++ b/.github/workflows/CI-CD-test-app-linux.yml
@@ -38,6 +38,8 @@ jobs:
         run: dotnet test -c Release --no-build --verbosity normal
 
       - name: Publish
+        env:
+          DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
         run: mkdir -p /home/runner/.aspnet/https && dotnet publish ./src/oed-testdata.Server/oed-testdata.Server.csproj --no-build -c Release -o ./publish
 
       - name: Deploy to Azure App Service (Test)
