--- a/.github/workflows/CI-CD-test-app-linux.yml
+++ b/.github/workflows/CI-CD-test-app-linux.yml
@@ -7,7 +7,6 @@ on:
   workflow_dispatch:
 env:
   DOTNET_VERSION: "10.x" # Global environment variables
-  DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
   TEST_APP_SERVICE_NAME: "oed-testapp-app-linux"
 
 jobs:
@@ -24,7 +23,7 @@ jobs:
           printf "%s on %s by %s\n" "$GITHUB_REPOSITORY" "$GITHUB_REF_NAME" "$GITHUB_ACTOR"
 
       - name: Set up .NET
-        uses: actions/setup-dotnet@baa11fbfe1d6520db94683bd5c7a3818018e4309 # v5
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
@@ -38,8 +37,6 @@ jobs:
         run: dotnet test -c Release --no-build --verbosity normal
 
       - name: Publish
-        env:
-          DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
         run: mkdir -p /home/runner/.aspnet/https && dotnet publish ./src/oed-testdata.Server/oed-testdata.Server.csproj --no-build -c Release -o ./publish
 
       - name: Deploy to Azure App Service (Test)
