--- a/.github/workflows/CI-CD-test-app-linux.yml
+++ b/.github/workflows/CI-CD-test-app-linux.yml
@@ -38,6 +38,7 @@ jobs:
         run: dotnet test -c Release --no-build --verbosity normal
 
       - name: Publish
+        continue-on-error: true
         run: mkdir -p /home/runner/.aspnet/https && dotnet publish ./src/oed-testdata.Server/oed-testdata.Server.csproj --no-build -c Release -o ./publish
 
       - name: Deploy to Azure App Service (Test)
